src/courses/styles/DetailedView.css
[data-theme="light"] {
	--detailed-class-info-color: #ffffff;
	--button-bg-color: #4caf50;
}

[data-theme="dark"] {
	--detailed-class-info-color: #2d2c2c;
	--button-bg-color: #0d8011;
}

.detailsParent {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: left;
}

.titleAndButtonParent {
	display: flex;
	justify-content: space-between;
	width: 100%;
	align-items: center;
}

.section-card {
	border-radius: 8px;
	flex-wrap: nowrap;
	justify-content: space-between;
}

.section-card2 {
	display: flex;
	justify-content: space-between;
}

.SectionInformation {
	display: grid;
}

.ClassTools {
	display: flex;
}

.ClassToolsMobile {
	/*border: 5px solid green;*/
	display: flex;
	font-size: '14px';
	margin-top: 0.2rem;
	margin-bottom: 0.8rem;
	margin-left: 0.5rem;
	margin-right: 0.5rem;
}

.SectionCalendarButtons {
	display: grid;
}

.pisaButton {
	padding: 8px 8px;
	margin-left: 0.2rem;
	margin-right: 0.2rem;
	margin-top: 0rem;
	margin-bottom: 0rem;
	/*color: chartreuse;*/
	background-color: var(--button-bg-color);
	border-radius: 4px;
	cursor: pointer;
	display: flex;
	align-items: center;
	gap: 6px;
}

.heading {
	border-bottom: 2px solid;
	border-color: var(--divider-color);
	padding-bottom: 10px;
	margin-bottom: 10px;
	margin-top: 0px;
}

.classDetails {
	border-radius: 8px;
	padding: 15px;
	margin-bottom: 15px;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
	box-sizing: border-box;
	width: 100%;
	background-color: var(--detailed-class-info-color);
}

.classDetailsGrid {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	gap: 15px;
	max-width: 800px;
	margin: 0 auto;
	justify-content: center;
	align-items: center;
}

.content-container {
	width: 100%;
	text-align: left;
	padding: 20px;
}

